Fix for excess spacing between section and footer when it proceeds a widget

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -6,131 +6,133 @@
 #migrated-site {
 
 
-// Stylseheet overrides
-// -----------------------------
+  // Stylesheet overrides
+  // -----------------------------
 
 
-// Template wrapper (replace with corresponding template classes)
-.main.wrapper {
-  width: 100%;
-  max-width: 100%;
-  margin: 0;
-}
-  
-// Main content spacing (replace with corresponding template class)
-.canvas {
-  padding: 0;
-}
-
-// Widget overflow to allow 10S overlays to display correctly
-.widget.content {
-  overflow: inherit;
-}
-
-.feature {
-    padding-top: 50px;
-    padding-right: 50px;
-    padding-left: 50px;
-  @media @tablet {
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
+  // Template wrapper (replace with corresponding template classes)
+  .main.wrapper {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
   }
-  @media @mobile {
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
+    
+  // Main content spacing (replace with corresponding template class)
+  .canvas {
+    padding: 0;
   }
-}
 
-
-
-// Migration styles
-// -----------------------------
-
-
-// Replace with corresponding template values
-@container-width: 860px;
-
-@spacing__first--desktop: 40px;
-@spacing__first--tablet:  30px;
-@spacing__first--mobile:  20px;
-
-@spacing--other: 30px;
-
-
-// Applies spacing to widgets to mimic container width
-.empty-zone,
-#page-zones__main:empty,
-#page-zones__main > .widget:not(.row),
-.row:not(.widget):not(.row--width-no-padding) .row__container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: @container-width;
-  width: 90%;
-}
-
-
-// Move spacing to first widget in the main zone (not sections)
-&.edit #page-zones__main-overlay + .widget:not(.row),
-#page-zones__main > .widget:not(.row):first-child {
-  margin-top: @spacing__first--desktop;
-
-  @media @tablet {
-    margin-top: @spacing__first--tablet;
+  // Widget overflow to allow 10S overlays to display correctly
+  .widget.content {
+    overflow: inherit;
   }
-  @media @mobile {
-    margin-top: @spacing__first--mobile;
+
+  .feature {
+      padding-top: 50px;
+      padding-right: 50px;
+      padding-left: 50px;
+
+    @media @tablet {
+      padding-top: 20px;
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+
+    @media @mobile {
+      padding-top: 20px;
+      padding-right: 20px;
+      padding-left: 20px;
+    }
   }
-}
 
 
-// Move spacing to last widget in the main zone (not sections)
-#page-zones__main > .widget:not(.row):last-child {
-  margin-bottom: @spacing__first--desktop;
 
-  @media @tablet {
-    margin-bottom: @spacing__first--tablet;
+  // Migration styles
+  // -----------------------------
+
+
+  // Replace with corresponding template values
+  @container-width: 860px;
+
+  @spacing__first--desktop: 40px;
+  @spacing__first--tablet:  30px;
+  @spacing__first--mobile:  20px;
+
+  @spacing--other: 30px;
+
+
+  // Applies spacing to widgets to mimic container width
+  .empty-zone,
+  #page-zones__main:empty,
+  #page-zones__main > .widget:not(.row),
+  .row:not(.widget):not(.row--width-no-padding) .row__container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: @container-width;
+    width: 90%;
   }
-  @media @mobile {
-    margin-bottom: @spacing__first--mobile;
+
+
+  // Move spacing to first widget in the main zone (not sections)
+  &.edit #page-zones__main-overlay + .widget:not(.row),
+  #page-zones__main > .widget:not(.row):first-child {
+    margin-top: @spacing__first--desktop;
+
+    @media @tablet {
+      margin-top: @spacing__first--tablet;
+    }
+    @media @mobile {
+      margin-top: @spacing__first--mobile;
+    }
   }
-}
 
 
-// Add spacing to the top of a widget when it follows a section
-#page-zones__main > .row + .widget:not(.row) {
-  margin-top: @spacing--other;
-}
+  // Move spacing to last widget in the main zone (not sections)
+  #page-zones__main > .widget:not(.row):last-child {
+    margin-bottom: @spacing__first--desktop;
 
-
-// Remove spacing if widget follows a light section (change to dark if template has a dark BG)
-#page-zones__main > .row.style--light + .widget:not(.row) {
-  margin-top: 0;
-}
-
-
-// Adds spacing to the section when a widget is before it
-#page-zones__main > .widget:not(.row) + .row {
-  margin-bottom: @spacing--other;
-  margin-top: @spacing--other;
-
-  &:not(:last-child) {
-       margin-bottom: 0;
+    @media @tablet {
+      margin-bottom: @spacing__first--tablet;
+    }
+    @media @mobile {
+      margin-bottom: @spacing__first--mobile;
+    }
   }
-}
 
 
-// Section controls
-.row-overlay:before,
-.row-overlay:after {
-    background: none !important;
-}
-.row-overlay:before {
-    background-image: linear-gradient(to right, transparent , #e8e8e8) !important;
-}
-.row-overlay:after {
-    background-image: linear-gradient(to left, transparent , #e8e8e8) !important;
-}
+  // Add spacing to the top of a widget when it follows a section
+  #page-zones__main > .row + .widget:not(.row) {
+    margin-top: @spacing--other;
+  }
+
+
+  // Remove spacing if widget follows a light section (change to dark if template has a dark BG)
+  #page-zones__main > .row.style--light + .widget:not(.row) {
+    margin-top: 0;
+  }
+
+
+  // Adds spacing to the section when a widget is before it
+  #page-zones__main > .widget:not(.row) + .row {
+    margin-bottom: @spacing--other;
+    margin-top: @spacing--other;
+
+    &:last-child {
+         margin-bottom: 0;
+    }
+  }
+
+
+  // Section controls
+  .row-overlay:before,
+  .row-overlay:after {
+      background: none !important;
+  }
+  .row-overlay:before {
+      background-image: linear-gradient(to right, transparent , #e8e8e8) !important;
+  }
+  .row-overlay:after {
+      background-image: linear-gradient(to left, transparent , #e8e8e8) !important;
+  }
 
 } // End of #migrated-site
